--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,8 @@
             </p>
             <h2>Este es para el primer commit
             </h2>
+
+            <h1>Aqui se van a unir las dos ramas</h1>
         </div>
         
 
